--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,13 @@ html {
   background:#fcfcfc;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", system-ui, sans-serif;
+  -webkit-font-smoothing: antialiased;
+}
+
 .input[type="number"] {
   width: 5rem;
 }
